# ros-roboterpraktikum

./: .gitignore  2021-08-05_14-57.csv  README.md  README.md~  mylasadata.bag  pose-amcl-with-amcl-1.csv  pose-amcl-with-amcl-2.csv  pose-amcl-with-odom.csv  pose-odom-with-amcl-1.csv  pose-odom-with-amcl-2.csv  pose-odom-with-odom.csv  style.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
bags/: 2021-08-04-17-18-59.bag  2021-08-04-17-39-25.bag
catkin_ws/devel/: .catkin  local_setup.sh  setup.sh
catkin_ws/devel/include/volksbot/: pose2d.h  ticks.h  velocitiesRequest.h  velocitiesResponse.h  vels.h
catkin_ws/devel/lib/lms100/: scanlistener  sicksensor
catkin_ws/devel/lib/pkgconfig/: lms100.pc  volksbot.pc
catkin_ws/devel/lib/python2.7/dist-packages/volksbot/msg/: _pose2d.py  _ticks.py  _vels.py
catkin_ws/devel/lib/python2.7/dist-packages/volksbot/srv/: _velocities.py
catkin_ws/devel/lib/volksbot/: calibration  jscontrol  kbcontrol  odometry  volksbot
catkin_ws/devel/share/lms100/cmake/: lms100Config.cmake
catkin_ws/devel/share/roseus/ros/volksbot/: manifest.l
catkin_ws/devel/share/volksbot/cmake/: volksbot-msg-extras.cmake  volksbot-msg-paths.cmake  volksbotConfig.cmake
catkin_ws/src/gio_path/: curves.h  gio_path.cpp
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
gmapping/: coordinates.csv  coordinates.gnuplot  odom-pose.csv
plots/: incomplete_map.pgm  pose-comparison.gnuplot  test-yaw-pose-amcl.csv  test-yaw.gnuplot
src/control/: CMakeLists.txt  README.md  package.xml
src/control/config/: custom_config.conf  gio_control.yaml  parameters.yaml  rosconsole.conf
src/control/include/gio_path/: GioFrame.h  InputGio.h  curves.h  gio_path.h
src/control/include/joystick/: firejet.h  joystick.h  logitechf710.h  predator.h
src/control/include/keyboard/: KbControl.h  keycodes.h
src/control/launch/: gio.launch  gio_tf.launch  js.launch  kb.launch
src/control/launch/parts/: pre.xml
src/control/resources/paths/: generate_circle.py
src/control/src/gio_path/: GioFrame.cpp  InputGio.cpp  curves.cpp  gio_path.cpp  gio_start_tf.cc  input_gio.cc
src/control/src/joystick/: firejet.cc  joystick.cc  jscontrol.cc  logitechf710.cc  predator.cc
src/control/src/keyboard/: KbControl.cpp  kb_control.cc
src/gio_path/: curves.h  gio_path.cpp  gio_path.h
src/lms100/: CMakeLists.txt
src/lms100/src/: lms100_cola.cc  lms100_cola.h  scanlistener.cc  sicksensor.cc
src/volksbot/: CMakeLists.txt  README  package.xml
src/volksbot/config/: amcl_init_pose.yaml  gio_control.yaml  parameters.yaml  rosconsole.conf  topdown.rviz
src/volksbot/config/robot/: irma.yaml  lars.yaml  sim.yaml  ute.yaml
src/volksbot/include/volksbot/: odometry.h
src/volksbot/launch/: amcl.launch  controller-keyboard.launch  input-gio.launch  input-joystick.launch  input_gio.launch  logger-coordinates.launch  map-provider.launch  map-recorder.launch  map-server.launch  map-viewer.launch  path-recorder.launch  robot.launch  temp-gio-start.launch  tools-debug.launch
src/volksbot/launch/config/: debug-output.conf  parameters.yaml
src/volksbot/launch/deprecated/lehre/: hector_mapping.launch  messtechnikamcl.launch  messtechnikpraktikum.launch
src/volksbot/launch/deprecated/parts/: localjoystick.launch  localkeyboard.launch
src/volksbot/launch/lehre/: messtechnikamcl.launch  messtechnikgmapping.launch  messtechnikmapserver.launch  messtechnikpraktikum.launch  pose_logger.launch
src/volksbot/launch/parts/: laser-calibration.xml  localcalibration.launch  localjoystick.launch  localkeyboard.launch  localrobot_base.launch  pre.xml  robot-selector.xml
src/volksbot/msg/: vel_limit.msg
src/volksbot/resources/bags/: test-odom-amcl.bag
src/volksbot/resources/coordinates/: coordinates-test.gnuplot  coordinates.gnuplot  gio-input.gnuplot  odom-pose-gio.csv  odom-pose-simulated.csv  odom-pose-test.csv
src/volksbot/resources/maps/: map.pgm  map.yaml  map_old.pgm  map_old.yaml
src/volksbot/resources/paths/: .~lock.circle.dat#  generate_circle.py
src/volksbot/resources/plots/: pose-amcl.csv
src/volksbot/src/: CVmc.h  KbControl.cpp  KbControl.h  PathRecorder.cpp  PathRecorder.h  calibration.cc  ekf_filter.cc  ekf_filter.h  kb_control.cc  kbcontrol.cc  kbcontrol.h  nocollide.cc  odometry.cc  odometry.cpp  odometry_main.cc  path_recorder.cc  pose_logger.cc  volksbot.cc
src/volksbot/src/Adapter/: CComAdapter.cpp  CComAdapter.h  IDeviceAdapter.h  common.h
src/volksbot/src/LayerClasses/: CCommunicationLayer.cpp  CTranslationLayer.cpp  CTranslationLayer.h  CVmc.cpp  CVmc.h  CvmcAPI.cpp  CvmcAPI.h
src/volksbot/src/Simulator/: MotorDummy.cpp  MotorDummy.h  Simulator.cpp  Simulator.h
src/volksbot/src/StorageClasses/: CMotor.cpp  CStorage.cpp
src/volksbot/src/SupportClasses/: CChannel.cpp  CChannel.h  CData.cpp  CData.h  CError.cpp  CError.h  CMessage.h  CMultisend.cpp  CMultisend.h  CRequest.h  CSendTwo.cpp  CSendTwo.h  CTimer.h
src/volksbot/src/VMC/Adapter/: CComAdapter.cpp  IDeviceAdapter.h
src/volksbot/src/VMC/LayerClasses/: CCommunicationLayer.cpp  CCommunicationLayer.h  CVmc.cpp  CVmc.h  CvmcAPI.cpp
src/volksbot/src/VMC/StorageClasses/: CMotor.h  CStorage.h
src/volksbot/src/VMC/SupportClasses/: CData.cpp  CMessage.cpp  CRequest.cpp  CTimer.cpp  CTimer.h  CTimestamp.cpp  CTimestamp.h  Config.h  Enums.h  commands.h
src/volksbot/src/epos2/: Definitions.h  epos2.cpp  epos2.h
src/volksbot/src/gio_path/: GioFrame.cpp  GioFrame.h  InputGio.cpp  InputGio.h  curves.cpp  curves.h  gio_path.cpp  gio_path.h  gio_start_tf.cc  input_gio.cc
src/volksbot/src/joystick/: firejet.cc  firejet.h  joystick.cc  joystick.h  jscontrol.cc  logitechf710.cc  logitechf710.h  predator.cc  predator.h
